--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,6 +25,7 @@ build:
     - docker:20.10.16-dind
   before_script:
     - docker info
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
   script:
     - echo $DOCKER_PORT
     - echo $DOCKER_PORT_2375_TCP
@@ -35,5 +36,15 @@ build:
     - echo $DOCKER_PORT_2376_TCP_PROTO
     - echo $DOCKER_PORT_2376_TCP_PORT
     - echo $DOCKER_PORT_2376_TCP_ADDR
-    - docker build -t my-docker-image .
-    # - docker run my-docker-image
+    - echo $CI_REGISTRY
+    - echo $CI_REGISTRY_USER
+    - echo $CI_REGISTRY_IMAGE
+    - echo $CI_PIPELINE_ID
+    - docker build -t $CI_REGISTRY_IMAGE/my-docker-image:$CI_PIPELINE_ID .
+    - docker images
+    - docker tag $CI_REGISTRY_IMAGE/my-docker-image:$CI_PIPELINE_ID $CI_REGISTRY_IMAGE/my-docker-image:latest
+    - docker images
+    # 推送，参见：https://jihulab.com/xuxiaowei-com-cn/docker-in-docker/container_registry
+    - docker push $CI_REGISTRY_IMAGE/my-docker-image:$CI_PIPELINE_ID
+    - docker push $CI_REGISTRY_IMAGE/my-docker-image:latest
+    # - docker run my-docker-image:$CI_PIPELINE_ID
