限制在 jihulab 共享 Runner 上运行

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,3 +53,5 @@ build:
     # docker run --rm registry.jihulab.com/xuxiaowei-com-cn/docker-in-docker/my-docker-image:latest
   only:
     - main
+  tags:
+    - jihulab
